# sniper

./: .env.example  .gitignore  CLAUDE_CODE_LP_NAV_ARBITRAGE_IMPLEMENTATION.md  CURVE_POOL_PRICING_FIX_INSTRUCTIONS.md  CURVE_PRICING_FIX_V2.md  CURVE_TOKEN_ORDER_FIX_V3.md  Cargo.toml  DEPLOYMENT.md  HIGH_VOLATILITY_TOKENS_IMPLEMENTATION.md  LP_NAV_QUICK_REFERENCE.md  sniper.service
src/: config.rs  gas_oracle.rs  main.rs  tokens.rs
src/brain/: bellman_ford.rs  filter.rs  mod.rs
src/cartographer/: curve_ng.rs  expanded_fetcher.rs  fetcher.rs  graph.rs  mod.rs  sky_ecosystem.rs  usd3_reserve.rs
src/cartographer/curve_lp/: adapter.rs  market_discovery.rs  mod.rs  nav_calculator.rs  types.rs
src/executor/: flash_loan.rs  flashbots.rs  mod.rs  signer.rs
src/simulator/: evm.rs  hook_checker.rs  mod.rs  quoter.rs  revm_setup.rs  swap_simulator.rs
