[package]
name = "sniper"
version = "0.3.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "Arbitrage detection bot for Uniswap V3/V4 + Multiple DEXes"

[dependencies]
# ============================================
# PHASE 1: The Cartographer (Data Ingest)
# ============================================

# Ethereum interaction - individual crates for version control
alloy-primitives = "1.0"
alloy-sol-types = "1.0"
alloy-provider = { version = "1.0", features = ["reqwest"] }
alloy-transport = "1.0"
alloy-transport-http = "1.0"
alloy-rpc-types = "1.0"
alloy-eips = "1.0"
alloy-network = "1.0"

# Async runtime (required for alloy)
tokio = { version = "1.42", features = ["full"] }

# Async utilities (for concurrent fetching - 20x faster!)
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================
# PHASE 2: The Brain (Cycle Detection)
# ============================================

# Graph data structure & algorithms (Bellman-Ford)
petgraph = "0.8"

# ============================================
# PHASE 3: The Simulator (Provider-based)
# ============================================
# Using alloy Provider's call() instead of REVM for simpler, more stable simulation

# ============================================
# PHASE 4: The Executor (Flash Loans + Flashbots)
# ============================================

# HTTP client for Flashbots RPC
reqwest = { version = "0.11", features = ["json"] }

# Configuration file support
toml = "0.8"

# Date/time for logging
chrono = { version = "0.4", features = ["serde"] }

# ============================================
# UTILITIES
# ============================================

# Error handling
eyre = "0.6"
color-eyre = "0.6"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables (.env file support)
dotenvy = "0.15"

# CLI argument parsing (for future use)
clap = { version = "4.5", features = ["derive"] }

# Pretty console output
console = "0.15"
indicatif = "0.17"  # Progress bars

# Hex encoding
hex = "0.4"

# Lazy static for global caching (NEW - for RPC optimization)
lazy_static = "1.4"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[profile.release]
# Optimize for speed in production
opt-level = 3
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile

[profile.dev]
# Faster compile times for development
opt-level = 0
debug = true
