[package]
name = "sniper"
version = "0.4.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "Arbitrage detection and execution bot for Uniswap V3/V4 + Multiple DEXes"
default-run = "sniper"

[dependencies]
# ============================================
# PHASE 1: The Cartographer (Data Ingest)
# ============================================

# Ethereum interaction - individual crates for version control
alloy-primitives = "1.0"
alloy-sol-types = "1.0"
alloy-provider = { version = "1.0", features = ["reqwest"] }
alloy-transport = "1.0"
alloy-transport-http = "1.0"
alloy-rpc-types = "1.0"
alloy-eips = "1.0"
alloy-network = "1.0"

# ============================================
# PHASE 4: Transaction Signing & Execution
# ============================================

# Signing support
alloy-signer = "1.0"
alloy-signer-local = "1.0"
alloy-consensus = "1.0"
alloy-rlp = "0.3"

# Async runtime (required for alloy)
tokio = { version = "1.42", features = ["full"] }

# Async utilities (for concurrent fetching - 20x faster!)
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ============================================
# PHASE 2: The Brain (Cycle Detection)
# ============================================

# Graph data structure & algorithms (Bellman-Ford)
petgraph = "0.8"

# ============================================
# PHASE 4: The Executor (Flash Loans + Flashbots)
# ============================================

# HTTP client for Flashbots RPC
reqwest = { version = "0.11", features = ["json"] }

# Configuration file support
toml = "0.8"

# Date/time for logging
chrono = { version = "0.4", features = ["serde"] }

# ============================================
# UTILITIES
# ============================================

# Error handling
eyre = "0.6"
color-eyre = "0.6"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables (.env file support)
dotenvy = "0.15"

# CLI argument parsing (for future use)
clap = { version = "4.5", features = ["derive"] }

# Pretty console output
console = "0.15"
indicatif = "0.17"  # Progress bars

# Hex encoding
hex = "0.4"

# Lazy static for global caching
lazy_static = "1.4"

# Random number generation (for wallet generation)
rand = "0.8"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"

[[bin]]
name = "sniper"
path = "src/main.rs"

[[bin]]
name = "diagnose"
path = "src/bin/diagnose.rs"

[[bin]]
name = "generate-wallet"
path = "src/bin/generate_wallet.rs"

[[bin]]
name = "deploy-check"
path = "src/bin/deploy_check.rs"

[[bin]]
name = "discover-pools"
path = "src/bin/discover_pools.rs"

[profile.release]
# Optimize for speed in production
opt-level = 3
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization, slower compile

[profile.dev]
# Faster compile times for development
opt-level = 0
debug = true
